Fix broken SPARQL query link and add missing doctype to header

--- a/tutorial/header.handlebars
+++ b/tutorial/header.handlebars
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <title>{{#if lesson}}{{lesson.name}} - {{/if}}The rdfpub Tutorial Site</title>
 <link rel="stylesheet" type="text/css" href="/tutorial/static/simple.css" />
 
