Update RDF links to reference the W3C semantic web wiki

--- a/tutorial/index.handlebars
+++ b/tutorial/index.handlebars
@@ -3,7 +3,7 @@
 <main>
   <p>This is the tutorial site for rdfpub, a static-ish site generator for
     publishing rich
-    <a href="https://www.w3.org/TR/rdf11-primer/">RDF</a>
+    <a href="https://www.w3.org/2001/sw/wiki/RDF">RDF</a>
     data to the World Wide Web. The links at the top of the page can be
     followed to learn about the various facets of an rdfpub site, including
     instructions and examples for how to create your own rdfpub site.
