--- a/tutorial/sparql/index.handlebars
+++ b/tutorial/sparql/index.handlebars
@@ -1,7 +1,10 @@
 {{> header }}
 
 <h1>SPARQL endpoint</h1>
-<p>Enter a SPARQL query below and submit it to get results.</p>
+<p>Every rdfpub site has a generated SPARQL endpoint that can execute queries
+  against the site's data. Enter a SPARQL query below to execute the it against
+  the tutorial site's SPARQL endpoint.
+</p>
 
 <form name=query method=get action=/tutorial/sparql target=_blank>
 <textarea name=query placeholder="Enter your SPARQL query here" required style="font-family:monospace;width:850px;height:450px"></textarea><br>
