--- a/tutorial/index.handlebars
+++ b/tutorial/index.handlebars
@@ -1,6 +1,7 @@
 {{>header}}
 
 <main>
+  <h1>Welcome!</h1>
   <p>This is the tutorial site for rdfpub, a static-ish site generator for
     publishing rich
     <a href="https://www.w3.org/2001/sw/wiki/RDF">RDF</a>
@@ -8,18 +9,22 @@
     followed to learn about the various facets of an rdfpub site, including
     instructions and examples for how to create your own rdfpub site.
   </p>
+  <p>To get started, check out
+    <a href="/tutorial/lessons/site-structure">the site structure lesson</a>.
+    It might help to follow along with
+    <a href="https://github.com/rdfpub/tutorial-site/tree/main/tutorial">the tutorial site's files</a>
+    to see how the various lessons of the tutorial correspond to the tutorial
+    site's own site files.
+  </p>
   <h2>Source</h2>
-  <p>
-    The
-    <a href="https://github.com/rdfpub/generator">rdfpub source code</a>
-    is maintained at GitHub along with other supporting projects within
+  <p>The <a href="https://github.com/rdfpub/tutorial-site">the source files for
+    this tutorial site</a>
+    are maintained at GitHub along with other supporting projects within
     <a href="https://github.com/rdfpub">the rdfpub organization</a>, including
-    <a href="https://github.com/rdfpub/tutorial-site">the source code for this
-      tutorial site</a>.
+    the <a href="https://github.com/rdfpub/generator">rdfpub generator</a>.
   </p>
   <h2>Thanks!</h2>
-  <p>
-    A big thanks to all of the developers of the projects that rdfpub depends
+  <p>A big thanks to all of the developers of the projects that rdfpub depends
     on, including but not limited to those who helped develop
     <a href="https://www.rdf4j.org">RDF4J</a>,
     <a href="https://handlebarsjs.com">Handlebars</a>,
@@ -29,8 +34,7 @@
     couldn't exist without the bedrock of technologies that all of you have
     contributed to.
   </p>
-  <p>
-    And a thanks to you, the person reading this, for taking the time to check
+  <p>And a thanks to you, the person reading this, for taking the time to check
     out this nifty little passion project. 🙂
   </p>
 </main>
