Generator v2.3.0 sync + versioned links

--- a/tutorial/index.handlebars
+++ b/tutorial/index.handlebars
@@ -12,7 +12,7 @@
   <p>To get started, check out
     <a href="/tutorial/lessons/site-structure">the site structure lesson</a>.
     It might help to follow along with
-    <a href="https://github.com/rdfpub/tutorial-site/tree/main/tutorial">the tutorial site's files</a>
+    <a href="https://github.com/rdfpub/tutorial-site/tree/v1.4.0/tutorial">the tutorial site's files</a>
     to see how the various lessons of the tutorial correspond to the tutorial
     site's own site files.
   </p>
